# flecs-luajit

./: .gitignore  .gitmodules  LICENSE.md  README.md  meson.build  todo.md
example/: flecs_mixin.lua  init.lua  main.c  meson.build
include/: module_plecs.h
include/flecs-luajit/: config.h  flecs_ext.h  host.h  lua_ext.h  module.h  module_base.h  util_lua.h
scripts/: file_to_header.py
src/: boot.lua  cdef.json  cdef.lua  flecs_ext.c  glue.lua  host.c  meson.build.bak  module.c  module_base.c  module_base.lua  module_plecs.c
